--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="USDTASIA is an instant and anonymous cryptocurrency exchange service that has been on the market since 2018. During this time, millions of users have successfully used our crypto exchange, and today we offer fast cryptocurrency exchange and purchase services to more than 2.6 million satisfied customers every month. In order to improve the functioning of our crypto exchange, we have partnered with industry leading companies. USDTASIA's qualified support staff is available 24/7 to help you with all your exchange related questions at any time."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
